// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with expenses 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Expense List
    </h1>
    <div>
      <a
        href="/edit/undefined"
      >
        <h3>
          Gum
        </h3>
      </a>
      <p>
        $0.20-January 1st, 2000
      </p>
    </div>
    <div>
      <a
        href="/edit/undefined"
      >
        <h3>
          Rent
        </h3>
      </a>
      <p>
        $109.50-Invalid date
      </p>
    </div>
    <div>
      <a
        href="/edit/undefined"
      >
        <h3>
          Credit Card
        </h3>
      </a>
      <p>
        $4.50-Invalid date
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render ExpenseList without expenses 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Expense List
    </h1>
  </div>
</DocumentFragment>
`;
